Change notebook name + minor edits

--- a/models/training/mobileNet_SDNet2018.ipynb
+++ b/models/training/mobileNet_SDNet2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "55422041",
+   "id": "7cd48e7e",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d425fa82",
+   "id": "82d21bc4",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4d1f8d3",
+   "id": "87112ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5c9532d",
+   "id": "e343d2fa",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "324dc23d",
+   "id": "27e2086a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2ea26e93",
+   "id": "d06dc8a3",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab9f1909",
+   "id": "893948c0",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1c6935e8",
+   "id": "15ea14e4",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2470adb1",
+   "id": "1c60d3fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b73b9593",
+   "id": "b24d4393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2ab8c771",
+   "id": "53de9f0b",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db23e351",
+   "id": "e8d9ed83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "30923487",
+   "id": "7ca5a11b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "369ca6f3",
+   "id": "43cdfd23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5135847e",
+   "id": "4aa86b3f",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1389f9bd",
+   "id": "71c80fc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1e468c3e",
+   "id": "0b44b1b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1447d5f3",
+   "id": "0d80d2b1",
    "metadata": {
     "scrolled": true
    },
@@ -14959,7 +14959,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1ad72d0f",
+   "id": "14e60976",
    "metadata": {},
    "outputs": [
     {
@@ -15016,7 +15016,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "91c6ea9b",
+   "id": "3826dd97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15072,7 +15072,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "53a44ae4",
+   "id": "b3bb7330",
    "metadata": {},
    "outputs": [
     {
@@ -15380,7 +15380,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ac664977",
+   "id": "c391384e",
    "metadata": {},
    "outputs": [
     {
@@ -15461,7 +15461,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d5300d1c",
+   "id": "d997a9e7",
    "metadata": {},
    "outputs": [
     {
@@ -15530,7 +15530,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a3aad46c",
+   "id": "686f1168",
    "metadata": {},
    "outputs": [
     {
@@ -15597,9 +15597,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69ed3e14",
+   "metadata": {},
+   "source": [
+    "EVALUATE The Best F1 model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0255f7c8",
+   "id": "2eb6b70b",
    "metadata": {},
    "outputs": [
     {
@@ -15684,7 +15692,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "442df886",
+   "id": "57b5aa58",
    "metadata": {},
    "outputs": [
     {
@@ -15753,7 +15761,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fb58755f",
+   "id": "be4e396c",
    "metadata": {},
    "outputs": [
     {
@@ -15822,7 +15830,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dc95a5d6",
+   "id": "ebc547c7",
    "metadata": {
     "scrolled": false
    },
@@ -15890,7 +15898,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c492f3b5",
+   "id": "eb8faef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15901,7 +15909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3934ffb",
+   "id": "ff368d42",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15909,7 +15917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b921e945",
+   "id": "425d58dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15917,7 +15925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3459aef5",
+   "id": "b8946b4b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15925,7 +15933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81166b87",
+   "id": "567159ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15933,7 +15941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea49274",
+   "id": "8f6c0baa",
    "metadata": {},
    "outputs": [],
    "source": []
