Change MobileNet dir name

--- a/models/MobileNetClassifier/mobileNet_SDNet2018.ipynb
+++ b/models/MobileNetClassifier/mobileNet_SDNet2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7cd48e7e",
+   "id": "2c117a1f",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82d21bc4",
+   "id": "4edd908b",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "87112ccd",
+   "id": "0d7dd661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e343d2fa",
+   "id": "13c9dd0f",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "27e2086a",
+   "id": "1182bbd1",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d06dc8a3",
+   "id": "86314ea5",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "893948c0",
+   "id": "4afb5c92",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "15ea14e4",
+   "id": "e4ea9eed",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1c60d3fb",
+   "id": "e9ab995a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b24d4393",
+   "id": "ff2d9122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "53de9f0b",
+   "id": "d03e559c",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e8d9ed83",
+   "id": "f8e8fb87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7ca5a11b",
+   "id": "9cdac671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "43cdfd23",
+   "id": "83321330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4aa86b3f",
+   "id": "99925f3c",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "71c80fc3",
+   "id": "32c1a3f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0b44b1b7",
+   "id": "2236c446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0d80d2b1",
+   "id": "1de48d5d",
    "metadata": {
     "scrolled": true
    },
@@ -14959,7 +14959,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "14e60976",
+   "id": "0e0f4d4d",
    "metadata": {},
    "outputs": [
     {
@@ -15016,7 +15016,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3826dd97",
+   "id": "ff66a754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15070,9 +15070,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62b8f78b",
+   "metadata": {},
+   "source": [
+    "EVALUATE The last model (epoch 300)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b3bb7330",
+   "id": "0f407dc8",
    "metadata": {},
    "outputs": [
     {
@@ -15380,7 +15388,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c391384e",
+   "id": "0837d6bf",
    "metadata": {},
    "outputs": [
     {
@@ -15461,7 +15469,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d997a9e7",
+   "id": "9deb043b",
    "metadata": {},
    "outputs": [
     {
@@ -15530,7 +15538,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "686f1168",
+   "id": "6a2f5fc4",
    "metadata": {},
    "outputs": [
     {
@@ -15598,7 +15606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ed3e14",
+   "id": "7b5bd95d",
    "metadata": {},
    "source": [
     "EVALUATE The Best F1 model"
@@ -15607,7 +15615,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2eb6b70b",
+   "id": "c3583017",
    "metadata": {},
    "outputs": [
     {
@@ -15692,7 +15700,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "57b5aa58",
+   "id": "aede0011",
    "metadata": {},
    "outputs": [
     {
@@ -15761,7 +15769,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "be4e396c",
+   "id": "7338f20b",
    "metadata": {},
    "outputs": [
     {
@@ -15830,7 +15838,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ebc547c7",
+   "id": "48f58fce",
    "metadata": {
     "scrolled": false
    },
@@ -15898,7 +15906,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eb8faef8",
+   "id": "3d871dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15909,7 +15917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff368d42",
+   "id": "310ed52b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15917,7 +15925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "425d58dd",
+   "id": "c5f276f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15925,7 +15933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8946b4b",
+   "id": "e79dffe5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15933,7 +15941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567159ba",
+   "id": "1864f54d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15941,7 +15949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f6c0baa",
+   "id": "d459c907",
    "metadata": {},
    "outputs": [],
    "source": []
